Refactored renderer and engine dll include path🚀

--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -6,14 +6,14 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 set(SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/sandbox/src)
-set(ENGINE_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/engine/src)
+set(ENGINE_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/oxcart/src)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include_directories(
   ${SOURCE_DIR}
-  ${CMAKE_HOME_DIRECTORY}/engine/src
+  ${CMAKE_HOME_DIRECTORY}/oxcart/src
 )
 
 # Retrieve all source and header files
@@ -23,9 +23,9 @@ file(GLOB_RECURSE HEADER_FILES ${CMAKE_HOME_DIRECTORY}/sandbox/src/*.hpp)
 add_executable(sandbox ${SOURCE_FILES} ${HEADER_FILES})
 
 target_include_directories(sandbox PRIVATE
-  ${CMAKE_HOME_DIRECTORY}/engine/src
+  ${CMAKE_HOME_DIRECTORY}/oxcart/src
 )
 
-target_link_libraries(sandbox engine)
+target_link_libraries(sandbox oxcart)
 
 install(TARGETS sandbox RUNTIME DESTINATION ${CMAKE_BINARY_DIR}/bin)
