--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.20.0)
 project(global)
 
 add_subdirectory(sandbox)
-add_subdirectory(engine)
+add_subdirectory(oxcart)
